app/javascript/styles/application.scss
// https://getbootstrap.com/docs/4.3/content/typography/#responsive-font-sizes
$enable-responsive-font-sizes: true;
$font-size-base: 1rem;

// Vars referencing existing bootstrap vars must
// go in this block and have the !global flag
// https://stackoverflow.com/a/38225564/337446
%scope {
  @import '~bootstrap/scss/functions';
  @import '~bootstrap/scss/variables';

  $badge-border-radius: $border-radius !global;
  $input-focus-border-color: $gray-600 !global;
  $input-border-color: $gray-500 !global;
  $input-placeholder-color: $gray-500 !global;
  $list-group-border-color: $gray-500 !global;
}

@import 'bootstrap-variables';
$body-bg: $theme-background; // Don't apply to mailer body
// Needs to be imported after the above scope block
@import '~bootstrap/scss/bootstrap';
@import 'bootstrap-overrides';

.alert {
  box-shadow: $box-shadow;
}

.badge {
  .close {
    margin-left: 0.25rem;
    color: inherit;
    font-size: 120%;
    line-height: 0.7;
    text-shadow: 0 1px 0 rgba(#000, 0.5);
  }
}

.btn {
  svg {
    vertical-align: bottom;
  }
}

.badge-white {
  @include badge-variant(white);
}

.btn-white {
  @include button-variant(white, white);
}

.btn-outline-white {
  @include button-outline-variant(white);
}

.date-pill {
  font-size: 95%;
  padding-right: 0.6em;

  .selected-date {
    font-weight: $font-weight-normal;
  }
}

@include media-breakpoint-down(xs) {
  form,
  .form-buttons {
    .btn {
      width: 100%;
    }
  }
}

.form-control:disabled {
  -webkit-text-fill-color: $input-color; // https://stackoverflow.com/a/4648315
}

.form-control[readonly] {
  background-color: $input-bg;

  &:focus {
    background-color: $input-focus-bg;
  }
}

.form-group {
  &.form-underline input {
    border-left: 0;
    border-right: 0;
    border-top: 0;
    height: auto;
    margin-left: 2px;
    margin-bottom: 2px;
    padding: 0;
  }

  label:not(.form-check-label) {
    font-weight: 600;
  }

  label:not(.required):not(.form-check-label):after {
    content: ' (optional)';
    font-size: 85%;
    font-weight: normal;
    font-style: italic;
  }
}

.input-group {
  .input-group-prepend {
    & ~ input {
      border-left: none;
    }

    .input-group-text {
      border-right: none;
    }
  }

  input:not(:last-child) {
    border-right: none;
  }

  &:focus-within {
    .input-group-text {
      border-color: $input-focus-border-color;
    }
  }
}

.section-heading {
  display: flex;

  .text,
  .left,
  .right {
    display: inline-block;
  }

  .text {
    flex-shrink: 1;
    font-size: $font-size-base * 1.1;
    max-width: 40%;
  }

  .left {
    background: linear-gradient(to left, $body-color, transparent);
  }

  .right {
    background: linear-gradient(to right, $body-color, transparent);
  }

  .left,
  .right {
    margin: auto 0.25rem;
    flex-grow: 1;
    height: 1px;
  }
}

input[type='number'] {
  -moz-appearance: textfield;

  &::-webkit-inner-spin-button,
  &::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }
}

.inset {
  border-radius: 24px;
  box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.15);
  color: $gray-500;
  padding: $grid-gutter-width / 2;

  a {
    color: inherit;
    font-weight: bold;
  }
}

label.list-group-item {
  margin: 0;
  // Restored from https://github.com/twbs/bootstrap/pull/28940
  margin-bottom: -$list-group-border-width;

  &:last-child {
    margin-bottom: 0;
  }
}

.list-group.check-list {
  input[type='checkbox'],
  input[type='radio'] {
    $input-height: 5px;
    height: $input-height;
    opacity: 0; // display: none would prevent validation messages from appearing with required: true

    & + .list-group-item {
      cursor: pointer;
      margin-top: -$input-height; // Account for the checkbox/radio button

      &:before {
        color: transparent;
        font-weight: bold;
        margin: auto 1em auto 0;
      }
    }

    &:checked + .list-group-item {
      background-color: $blue;
      color: #fff;

      &:before {
        color: inherit;
      }
    }

    &:not(:checked) + .list-group-item {
      background-color: inherit;
    }
  }

  &:not(.with-icon) {
    input[type='checkbox'] + .list-group-item:before {
      content: '\2713';
    }

    input[type='radio'] + .list-group-item:before {
      content: '\25C9';
    }
  }
}

.login-button {
  font-size: $nav-link-font-size;
  padding: $font-size-base * 0.47 $font-size-base;
}

.mw-50 {
  max-width: 50%;
}

.mw-600px {
  max-width: 600px;
}

.navbar {
  box-shadow: 0 3px 13px rgba(0, 0, 0, 0.08);

  .navbar-brand {
    padding-top: 0;

    img {
      max-width: 150px;
    }
  }
}

.neg-margin {
  margin-left: -$grid-gutter-width / 2;
  margin-right: -$grid-gutter-width / 2;
}

.rubber-stamp {
  $color: green;
  box-shadow: 0 0 0 3px $color, 0 0 0 2px $color inset;
  border: 2px solid transparent;
  border-radius: 4px;
  display: inline-block;
  padding: 0.2rem 0.5rem;
  color: $color;
  font-size: 1rem;
  font-weight: bold;
  text-transform: uppercase;
  text-align: center;
  transform: rotate(-5deg);
}

// Style select placeholder. This is a hack because selects have a placeholder element that's disabled & selected by default. If the select is required, then the disabled placeholder is an invalid choice.
select:invalid {
  color: $input-placeholder-color;

  // Fix for Firefox which will make all options placeholder color
  option:not([disabled]) {
    color: $input-color;
  }
}

.table th {
  border-top: none;
}

td.action-list {
  text-align: right;
  white-space: nowrap;

  a {
    margin-right: 0.75rem;
  }

  .btn {
    line-height: 1;
  }
}

#top-nav {
  min-height: 56px;
}

.comments-list {
  .comment-item p {
    white-space: pre-line;
  }

  .comment-inline-edit textarea {
    width: 100%;
  }

  .error {
    margin-right: 1rem;
  }

  .list-group-item.text-left {
    background: white;
    color: black;
  }

  .list-group-item.text-right {
    background: $primary;
    color: white;

    h5 {
      color: white;
    }
  }
}

.StripeElement--focus {
  color: $input-focus-color;
  background-color: $input-focus-bg;
  border-color: $input-focus-border-color;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  50% {
    transform: rotate(360deg);
  }

  100% {
    transform: rotate(720deg);
  }
}

.spinner {
  animation-name: spin;
  animation-duration: 2s;
  animation-timing-function: ease;
  animation-iteration-count: infinite;
}

